# fast-upload

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: upload_example.py
scripts/: upload.py
server/: app.py  routes.py  storage.py
