[project]
name = "fast-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "fastapi[standard]>=0.136.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
line_length = 88
